# StackAI

./: .gitignore  README.md
AmazonBedrockCustomerCareIntegration/: 02_agentcore_memory.py  main.py  pyproject.toml  requirements.txt
DeepAgents_poc/: main.py  pyproject.toml  requirements.txt
DeepAgents_poc/deepagentsdemo/: 1.basicdeepagents.ipynb
GenAI_AWS_Bedrock/: main.py  pyproject.toml
GuardRails_Info/: file.ipynb  file.md  main.py  pyproject.toml  requirements.txt
LLMEvaluation/: file.ipynb  pyproject.toml  requirements.txt
MCPDEMOLANGCHAIN/: client.py  mathserver.py  pyproject.toml  weather.py
Memory_Agent/Agent_Memory_Lineage/: .gitignore  10_procedural_memory.ipynb  11_self_reflection_memory.ipynb  12_memory_routing.ipynb  13_forgetting_and_decay.ipynb  1_conversational_buffer_memory.ipynb  2_sliding_window_memory.ipynb  3_summary_memory.ipynb  4_summary_buffer_memory.ipynb  5_token_buffer_memory.ipynb  6_vector_store_memory.ipynb  7_entity_memory.ipynb  8_episodic_memory.ipynb  9_semantic_memory.ipynb
PRReviewRAGPipeline/: filetest.ipynb  main.py  pyproject.toml
RAGPIPELINE/: app.py  main.py  pyproject.toml  requirements.txt
RAGPIPELINE/faiss-store/: faiss.index
RAGPIPELINE/faiss_store/: metadata.pkl
RAGPIPELINE/src/: data_loader.py  embedding.py  search.py  vectorstore.py
RAG_Concepts/: main.py  pyproject.toml
RAG_Concepts/notebook/: document.ipynb
VectorelessRAG/: file.ipynb  main.py  pyproject.toml
VectorelessRAG/PageIndex/: README.md
agentic1/: main.py  pyproject.toml
agentic1/updatedlangchain/: langchainintro.ipynb  middleware.ipynb  toolcaling.ipynb
langgraoh_concepts/: CLAUDE.md  main.py  pyproject.toml
langgraoh_concepts/1-BasicChatBot/: 1-basicchatBot.ipynb  1.1-basicchatBotwitTools.ipynb  1.2-humanfeedbackintheLoop.ipynb
study/: llmgateway.ipynb  llmgatewayNew.ipynb
