[project]
name = "amazonbedrockcustomercareintegration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bedrock-agentcore>=1.0.7",
    "bedrock-agentcore-starter-toolkit>=0.2.0",
    "faiss-cpu>=1.13.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.7",
    "langchain-groq>=1.1.0",
    "langchain-huggingface>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langchain[aws]>=1.1.0",
    "langgraph>=1.0.4",
    "langgraph-checkpoint-aws>=1.0.1",
    "sentence-transformers>=5.1.2",
    "typing-extensions>=4.15.0",
]
