[project]
name = "deepagents-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.6.11",
    "ipykernel>=7.3.0",
    "langchain>=1.3.10",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.2",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.26",
]
