[project]
name = "llmevaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "dotenv>=0.9.9",
    "ipykernel>=7.3.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.3",
    "langsmith>=0.9.6",
    "openai>=2.44.0",
    "pandas>=3.0.3",
]
