[project]
name = "rag-concepts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.2",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.13.1",
]
