[project]
name = "langgraoh-concepts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain>=1.3.4",
    "langchain-groq>=1.1.2",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.4",
    "langsmith>=0.8.9",
    "python-dotenv>=1.2.2",
]
